[package]
name = "playground"
version = "0.1.0"
build = "build.rs"

[dependencies]
libc = "0"

serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"

log = "0.3.6"
futures = "0.1"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dev-dependencies]
env_logger = "0.3.0"

[build-dependencies]
gcc = "0"

[replace]
"tokio-core:0.1.0" = { git = "https://github.com/tokio-rs/tokio-core" }
