[package]
name = "playground"
version = "0.1.0"
build = "build.rs"

[dependencies]
libc = "0"

env_logger = "0.3.5"
log = "0.3.6"
futures = "0.1"

serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"

ws = "0.5.3"
mio = { version = "*", git = "https://github.com/carllerche/mio.git" }

tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[build-dependencies]
gcc = "0"
